--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js"
     charset="utf-8"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATg5pwEAERPpd2GkNHQrtLvK1pKYZlDEk&libraries=places"></script>
+
 </head>
 
 <body>
