회원가입하면위도경도자동추가으앙

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c0e61a675067767007fc527e42495678&libraries=services,clusterer&autoload=false"></script>
   <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js"
     charset="utf-8"></script>
