--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,15 @@
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c0e61a675067767007fc527e42495678&libraries=services"></script>
   <!-- 카카오 로그인 -->
-  <!-- <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
           integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" 
           crossorigin="anonymous">
   </script>
-  <script>
-    Kakao.init('cc117c6a33aaf46b90fc5b309a9912d1'); // 사용하려는 앱의 JavaScript 키 입력
-  </script> -->
 
-
-  
-  <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
+  <!-- 네이버 로그인  -->
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js"
     charset="utf-8"></script>
+    <!-- 제이쿼리 -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATg5pwEAERPpd2GkNHQrtLvK1pKYZlDEk&libraries=places"></script>
 
