--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATg5pwEAERPpd2GkNHQrtLvK1pKYZlDEk&libraries=places"></script>
 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://example.com;">
 </head>
 
 <body>
